src/test/ui/impl-trait/issues/issue-70877.stderr
error[E0271]: type mismatch resolving `<Bar as Iterator>::Item == Box<(dyn for<'r> Fn(&'r (dyn ToString + 'r)) -> Option<String> + 'static)>`
  --> $DIR/issue-70877.rs:7:12
   |
LL | type Foo = impl Iterator<Item = FooItem>;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type mismatch resolving `<Bar as Iterator>::Item == Box<(dyn for<'r> Fn(&'r (dyn ToString + 'r)) -> Option<String> + 'static)>`
   |
note: expected enum `Option`, found opaque type
  --> $DIR/issue-70877.rs:13:17
   |
LL |     type Item = FooItem;
   |                 ^^^^^^^
   = note: expected type `Box<(dyn for<'r> Fn(&'r (dyn ToString + 'r)) -> Option<String> + 'static)>`
              found type `Box<(dyn for<'r> Fn(&'r (dyn ToString + 'r)) -> impl Debug + 'static)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
